FOLIO Login-with-expiry token implementation.
Also trying to connect with OCLC API and testing the OCLC operations.

--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,18 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>4.1</version>
 		</dependency>
-		
+
+	<!-- 	<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.14</version>
+		</dependency> -->
+
+		<dependency>
+			<groupId>org.apache.oltu.oauth2</groupId>
+			<artifactId>org.apache.oltu.oauth2.client</artifactId>
+			<version>0.31</version>
+		</dependency>
 	</dependencies>
 
 	<build>
