--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,11 +57,12 @@ spring.jpa.hibernate.ddl-auto=validate
 # ===============================
 # = Folio configs
 # ===============================
-# folioTenant =
-# folioURL =
-# folioToken =
+#folioUsername : 
+#folioPassword : 
+#folioTenant : 
+#folioURL : 
 
 # ===============================
 # = configuration file
 # ===============================
-spring.profiles.active=dev
+spring.profiles.active : prod
