--- a/pom.xml
+++ b/pom.xml
@@ -116,11 +116,12 @@
 			<version>4.1</version>
 		</dependency>
 
-	<!-- 	<dependency>
+		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.14</version>
-		</dependency> -->
+			<version>4.5.13</version> <!-- Use the latest version available -->
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.apache.oltu.oauth2</groupId>
