--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ src/.DS_Store
 src/main/resources/.DS_Store
 src/main/resources/application-dev.properties
 src/main/resources/application-prod.properties
+/bin/
