Adding a new corn job to change user properties and related changes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,4 +65,4 @@ spring.jpa.hibernate.ddl-auto=validate
 # ===============================
 # = configuration file
 # ===============================
-spring.profiles.active : dev
+spring.profiles.active : prod
