Adding ribbon message, modification and many more...
Adding Release notification, Cicr report update, Adding more documentation for the operation, restructure main menu, access log from user interface and bug fixes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,9 @@ spring.datasource.validationQuery=SELECT 1
 logging.level.com.okstatelibrary = info
 logging.file=logs/file.log
 
+management.endpoints.web.exposure.include=logfile
+logging.file.name=logs/file.log
+
 # ===============================
 # = File paths
 # ===============================
@@ -51,7 +54,9 @@ spring.jpa.properties.hibernate.format_sql=false
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.open-in-view=true
 
 
 # ===============================
