--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
 			<artifactId>org.apache.oltu.oauth2.client</artifactId>
 			<version>0.31</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
