Added relevant changes to run OKS-OSU Main Stacks not circulated items.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,4 +70,5 @@ spring.jpa.hibernate.ddl-auto=update
 # ===============================
 # = configuration file
 # ===============================
+scheduleCornJobsRunStatus : false
 spring.profiles.active : dev
