Add the property of scheduleCornJobsRunStatus to check scheduled corn jobs.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,5 +70,5 @@ spring.jpa.hibernate.ddl-auto=update
 # ===============================
 # = configuration file
 # ===============================
-scheduleCornJobsRunStatus : false
+# scheduleCornJobsRunStatus : false
 spring.profiles.active : dev
