Add new settings, Remove unwanted hardcoded numbers , fine tune OCLC process and bug fixes.

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
 	<licenses>
 		<license>
-			<name>MIT License</name>
+			<name>(c)2025 Oklahoma State University</name>
 			<url>http://www.opensource.org/licenses/mit-license.php</url>
 		</license>
 	</licenses>
@@ -142,6 +142,26 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			 <!-- Checkstyle -->
+       <!--      <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.3.0</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <configLocation>google_checks.xml</configLocation> or sun_checks.xml
+                    <encoding>UTF-8</encoding>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>true</failsOnError>
+                </configuration>
+            </plugin> -->
 		</plugins>
 	</build>
 
