--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,4 +71,4 @@ spring.jpa.hibernate.ddl-auto=update
 # = configuration file
 # ===============================
 # scheduleCornJobsRunStatus : false
-spring.profiles.active : dev
+spring.profiles.active : prod
