Circulation loan report process, Documentation and bug fixes and improvements.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,6 +68,11 @@ spring.jpa.hibernate.ddl-auto=update
 #folioURL : 
 
 # ===============================
+# = Session configs
+# ===============================ßß
+#server.servlet.session.timeout=20m
+
+# ===============================
 # = configuration file
 # ===============================
 # scheduleCornJobsRunStatus : false
