Initial development for ARL report request.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,4 +76,4 @@ spring.jpa.hibernate.ddl-auto=update
 # = configuration file
 # ===============================
 # scheduleCornJobsRunStatus : false
-spring.profiles.active : prod
+spring.profiles.active :dev
